[tool.poetry]
name = "dev-github-action-auto-update-helm"
version = "0.1.0"
description = ""
authors = ["HenryLi <henry.li@pentium.nerwork>"]
readme = "Readme.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.0.3"
pygithub = "^1.59.0"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
mypy = "^1.4.1"
pyyaml = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
    .git
  | .venv
  | ^/data
  | ^/logs
)
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.svn',
    '.tox',
]

[tool.mypy]
python_version = 3.11
warn_return_any = true
disallow_untyped_defs = true
exclude=[
  'tests/*',
]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true
